--- a/PerplexKraken/Kraken.csproj
+++ b/PerplexKraken/Kraken.csproj
@@ -45,10 +45,6 @@
       <HintPath>..\packages\UmbracoCms.Core.7.3.0\lib\interfaces.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="RestSharp">
       <HintPath>..\Input\RestSharp.dll</HintPath>
       <Private>False</Private>
@@ -70,6 +66,10 @@
     <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System.Xml">
@@ -132,7 +132,9 @@
     <Content Include="Controls\Installer.ascx">
       <SubType>ASPXCodeBehind</SubType>
     </Content>
-    <Content Include="Controls\Status.ascx" />
+    <Content Include="Controls\Status.ascx">
+      <SubType>ASPXCodeBehind</SubType>
+    </Content>
     <Content Include="Controls\Overview.ascx">
       <SubType>ASPXCodeBehind</SubType>
     </Content>
