--- a/PerplexKrakenLegacy/KrakenLegacy.csproj
+++ b/PerplexKrakenLegacy/KrakenLegacy.csproj
@@ -115,7 +115,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy $(TargetPath) "$(SolutionDir)Input\Kraken" /Y /S</PostBuildEvent>
+    <PostBuildEvent>xcopy $(TargetPath) "$(SolutionDir)Input" /Y /S</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
